--- a/ReactTemplate/ReactTemplate.csproj
+++ b/ReactTemplate/ReactTemplate.csproj
@@ -192,6 +192,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Scripts\app\store\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -212,8 +213,11 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
+    <TypeScriptCompile Include="Scripts\app.d.ts" />
+    <TypeScriptCompile Include="Scripts\app\actions\index.ts" />
     <TypeScriptCompile Include="Scripts\app\App.tsx" />
     <TypeScriptCompile Include="Scripts\app\components\Home.tsx" />
+    <TypeScriptCompile Include="Scripts\app\reducers\index.ts" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
