--- a/ReactTemplate/package.json
+++ b/ReactTemplate/package.json
@@ -6,11 +6,15 @@
   },
   "dependencies": {
     "react": "15.6.1",
-    "react-dom": "15.6.1"
+    "react-dom": "15.6.1",
+    "redux": "3.7.1",
+    "react-redux": "5.0.5",
+    "react-router": "4.1.1"
   },
   "devDependencies": {
-    "typescript": "2.4.1",
+    "typescript": "2.3.2",
     "ts-loader": "2.2.2",
-    "webpack": "3.0.0"
-  }
+    "webpack": "3.0.0",
+    "typings": "^2.1.1"
+  }
 }
